Sun Jun 10 13:33:21 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_db.cc: New testcase in allterms6.

Sun Jun 10 13:20:37 BST 2007  Olly Betts <olly@survex.com>

	* xapian-config.in: Add special case check for host_os matching linux*
	  or k*bsd-gnu since vanilla libtool doesn't identify them as needing
	  link_all_deplibs_CXX=no.

Sun Jun 10 03:32:54 BST 2007  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Sun Jun 10 02:14:58 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Sat Jun 09 17:28:32 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Add the unstem entry for boolean
	  prefixed terms in Term::make_term() as we do for other terms.

Sat Jun 09 17:27:55 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Replace reference to Xapian "1.0" with
	  "1.0.0".

Sat Jun 09 17:12:44 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,queryparser/queryparser_internal.h:
	  Factor out the code which actually parses a term into a separate
	  method.

Fri Jun 08 23:31:23 BST 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Distribute tests/testdata/flint-0.9.9/.

Fri Jun 08 19:20:36 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Fri Jun 08 18:55:43 BST 2007  Olly Betts <olly@survex.com>

	* examples/simplesearch.cc: Report "Matches 1-<N>:".

Fri Jun 08 18:46:02 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/omenquire.cc: Fix issue brought to my attention by Enrico
	  Zini: if an uninitialised database is supplied to Enquire,
	  performing a search will cause a segfualt.  It isn't completely
	  clear whether using an uninitialised database should cause an 
	  error, or whether the search should return an empty result list,
	  but for ease of implementation, and to avoid application errors
	  going unnoticed, I've made Enquire's constructor report an
	  InvalidArgumentError if the supplied database is uninitialised.